--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
+    <title>Calculo Imc</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -16,8 +16,8 @@
         <p>
         <ul class="indiceIMC">
             <li><b>IMC</b></li>
-            <li>Menos que 18,5</li>
-            <li>Entre 18, e 24,9</li>
+            <li>Menos que 18</li>
+            <li>Entre 18 e 24,9</li>
             <li>Entre 25 e 29,9</li>
             <li>Entre 30 e 34,9</li>
             <li>Entre 35 e 39,9</li>
